--- a/style.css
+++ b/style.css
@@ -375,7 +375,7 @@ nav .right a:last-child{
   }
 
   nav .sidebar i{
-    margin-top: 20px;
+    margin-bottom: 20px;
   }
 
   .hero-section .text h2{
