--- a/style.css
+++ b/style.css
@@ -605,6 +605,230 @@ nav .right a:last-child{
    }
 }
 
+@media (min-width:400px) and (max-width:480px){
+   /* SECTION 1:HERO */
+   .hero-section{
+    flex-direction: column-reverse;
+  }
+
+  .hero-section .headshot img{
+    width: 380px;
+  }
+
+  .hero-section .text p{
+    text-align: center;
+    width: 100%;
+    margin-left: 0;
+  }
+
+  .hero-section .text h2{
+    text-align: center;
+  }
+
+  .hero-section .text .links{
+   display: flex;
+   margin-left: 20px;
+   gap: 5px;
+   padding: 0px;
+  }
+
+  .hero-section .text .links .contact{
+    margin-left: 100px;
+    margin-top: 10px;
+  }
+
+  .hero-section .text  .btn{
+    margin-left: 40px;
+  }
+
+  /* SECTION 3: TESTIMONY */
+  .testimony-section{
+    text-align: center;
+  }
+
+  /* SECTION 4 : CONTACT */
+  .contact-section .group{
+    flex-direction: column;
+  }
+
+
+  .hero-section .text .links{
+    display: flex;
+    margin-left: 20px;
+    gap: 5px;
+    padding: 0px;
+   }
+
+   .hero-section .text h2{
+    text-align: center;
+  }
+
+
+  .hideOnMobile{
+    display: none;
+  }
+
+  .menu-button{
+    display: block;
+  }
+
+  .navbar li .hideOnMobile{
+    display: none;
+   }
+
+   .sidebar {
+    width: 100%;
+    display: none;
+
+  }
+  .sidebar.open {
+    display: flex;
+  }
+  
+
+  nav .sidebar i{
+    margin-bottom: 1px;
+  }
+
+  .hero-section .text h2{
+    text-align: center;
+    margin-left: 50px;
+  }
+
+  .hero-section .text p{
+    text-align: center;
+  }
+
+  .hero-section .links{
+   width: 400px;
+  }
+
+
+.contact-section h2{
+  font-size: 40px;
+  }
+
+  .contact-section h1{
+    text-align: center;
+    }
+
+    .contact-section p{
+      text-align: center;
+      }
+}
+
+
+@media (min-width: 601px) and (max-width: 1024px) {
+   /* SECTION 1:HERO */
+   .hero-section{
+    flex-direction: column-reverse;
+  }
+
+  .hero-section .headshot img{
+    width: 380px;
+  }
+
+  .hero-section .text p{
+    text-align: center;
+    width: 100%;
+    margin-left: 0;
+  }
+
+  .hero-section .text h2{
+    text-align: center;
+  }
+
+  .hero-section .text .links{
+   display: flex;
+   margin-left: 20px;
+   gap: 5px;
+   padding: 0px;
+  }
+
+  .hero-section .text .links .contact{
+    margin-left: 100px;
+    margin-top: 10px;
+  }
+
+  .hero-section .text  .btn{
+    margin-left: 40px;
+  }
+
+  /* SECTION 3: TESTIMONY */
+  .testimony-section{
+    text-align: center;
+  }
+
+  /* SECTION 4 : CONTACT */
+  .contact-section .group{
+    flex-direction: column;
+  }
+
+  .hero-section .text .links{
+    display: flex;
+    margin-left: 20px;
+    gap: 5px;
+    padding: 0px;
+   }
+
+   .hero-section .text h2{
+    text-align: center;
+  }
+
+
+  .hideOnMobile{
+    display: none;
+  }
+
+  .menu-button{
+    display: block;
+  }
+
+  .navbar li .hideOnMobile{
+    display: none;
+   }
+
+   .sidebar {
+    width: 100%;
+    display: none;
+
+  }
+  .sidebar.open {
+    display: flex;
+  }
+  
+
+  nav .sidebar i{
+    margin-bottom: 1px;
+  }
+
+  .hero-section .text h2{
+    text-align: center;
+    margin-left: 50px;
+  }
+
+  .hero-section .text p{
+    text-align: center;
+  }
+
+  .hero-section .links{
+   width: 400px;
+  }
+
+
+.contact-section h2{
+  font-size: 40px;
+  }
+
+  .contact-section h1{
+    text-align: center;
+    }
+
+    .contact-section p{
+      text-align: center;
+      }
+}
+
 
 
 
@@ -643,55 +867,6 @@ font-size: 30px;
   color: gold;
 }
  /* PROJECT SECTION */
-/* #project-section{
-  padding: 2rem;
-}
-
-.slider-wrapper{
-  position: relative;
-  max-width: 34rem;
-  margin: 0 auto;
-}
-
-.slider{
-  display: flex;
-  aspect-ratio: 16 / 9;
-  overflow: auto;
-  scroll-snap-type: x mandatory;
-  scroll-behavior: smooth;
-  box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%,0.25);
-}
-
-.slider img{
-  flex: 1 0 100%;
-  scroll-snap-align: start;
-  object-fit: cover;
-}
-
-.slider-nav{
-  display: flex;
-  column-gap: 1rem;
-  position: absolute;
-  bottom: 1.25rem;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 1;
-}
-
-.slider-nav a{
-  width: 0.5rem;
-  height: 0.5rem;
-  border-radius: 50%;
-  background-color: #fff;
-  opacity: 0.75;
-  transition: opacity ease 250ms;
-}
-
-.slider-nav a:hover{
-  opacity: 1;
-} */
-
-
 
 #project-section {
   scroll-margin-top: 100px;
@@ -738,7 +913,7 @@ font-size: 30px;
   margin-bottom: 10px;
   width: 100%;
   margin-left: 0px;
-  font-size: 22px;
+  font-size: 29px;
 }
 
 .img{
